[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "payload_dumper"
authors = [{name = "huakim", email = "fijik19@gmail.com"}]
license = {text = "Apache 2.0"}
description = "File transport adapter for Requests"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
]
urls = {Homepage = "https://github.com/huakim/payload-dumper"}
dependencies = ["requests>=1.0.0", "protobuf>=3.19.1", "bsdiff4>=1.2.1"]
version = "0.2.1"

[tool.distutils.bdist_wheel]
universal = 1

[tool.setuptools]
py-modules = ["payload_dumper"]
include-package-data = false

[project.scripts]
executive = "payload_dumper.dumper:main"
