[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "payload_dumper"
authors = [{name = "huakim", email = "fijik19@gmail.com"}]
license = {text = "Apache 2.0"}
description = "File transport adapter for Requests"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
]
urls = {Homepage = "https://github.com/huakim/payload-dumper"}
dependencies = ["protobuf>=5.27.3","six>=1.16.0","bsdiff4>=1.1.5","brotli>=1.1.0","zstandard>=0.23.0","fsspec>=2023.0.0","requests>=2.28.0","aiohttp>=3.8.0"]
version = "0.2.4"

[tool.distutils.bdist_wheel]
universal = 1

[tool.setuptools]
py-modules = ["payload_dumper"]
include-package-data = false

[project.scripts]
payload_dumper = "payload_dumper.dumper:main"
